Improved UI and Resolved Warnings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Text Detector</string>
+    <string name="scanner_image">Scanner Image</string>
+    <string name="scanner_image">Scanner Image</string>
 </resources>
